{
    "name": "InputMap",
    "maps": [
        {
            "name": "Touch",
            "id": "0508cb2c-8694-4671-ad3c-2d418876bf35",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "010bbda3-dac0-406f-9208-49c4ef4b95b0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "5366ff40-7744-45f0-b146-5fb1dd30d1ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0cbe0d51-8d42-4485-8826-35e5b3963dd9",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "231e10ec-e36f-4e56-b3af-558ae5fcf2e6",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}